--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 pandas = "^2.2.1"
 numpy = "^1.26.4"
+pypyodbc = "^1.3.6"
+pyodbc = "^5.1.0"
 
 
 [build-system]
